# Multi-Media-Compression

./: Readme.md
EE669/: HW1_utli.hpp  Huffman_GS.hpp  Huffman_adp.hpp  ShannonFano.hpp  io.cpp  io.hpp  main.cpp  utli.hpp
EE669.xcodeproj/: project.pbxproj
EE669.xcodeproj/xcshareddata/xcschemes/: EE669.xcscheme
EE669.xcodeproj/xcuserdata/alex.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
EE669/Homework1/: HW1_utli.hpp  Huffman_GS.hpp  Huffman_adp.hpp  ShannonFano.hpp
EE669/Homework2/: BAC.hpp  CABAC.hpp  HW2_utli.hpp  QMcoder_src.cpp  QMcoder_src.hpp
EE669/Homework3/: HW3_utli.hpp  SQ.hpp  VQ.hpp
EE669/Homework3/EE569/: Basic.hpp
EE669/Homework3/stdvq/: CMakeLists.txt
EE669/Homework3/stdvq/lib/: libHW3.dylib
EE669/Homework3/tsvq/notused/: CMakeLists.txt  tsvq_util.c  tsvqe_util.c
EE669/Homework4/: JPEG.hpp
EE669/Homework6/: readraw.m
